// Produced by Acceleo Cpp Generator 1.1.0-R7S1-20151214

import "ccsds_mal/types.proto";
import "tchistory/ExpectedAck.proto";
import "tchistory/TcComponent.proto";
import "tchistory/SendTypeEnum.proto";
import "tchistory/SuccessiveAck.proto";

package tchistory.protobuf;

message TCHistory {
extensions 23 to 123;

  optional ccsds_mal.protobuf.FINETIME sendingDate = 1;
  optional ccsds_mal.protobuf.STRING historyName = 2;
  optional ccsds_mal.protobuf.BLOB rawPacket = 3;
  optional ccsds_mal.protobuf.STRING procedureName = 4;
  optional ccsds_mal.protobuf.UOCTET tcSourceId = 5;
  optional ccsds_mal.protobuf.BOOLEAN isPUS = 6;
  optional ccsds_mal.protobuf.UOCTET service = 7;
  optional ccsds_mal.protobuf.UOCTET subService = 8;
  optional ccsds_mal.protobuf.UINTEGER sequenceCount = 9;
  optional ccsds_mal.protobuf.USHORT apid = 10;
  optional ccsds_mal.protobuf.BOOLEAN visibility = 11;
  optional tchistory.protobuf.SendTypeEnum sendType = 12;
  optional ccsds_mal.protobuf.STRING tcNums = 13;
  optional ccsds_mal.protobuf.UINTEGER subscheduleId = 14;
  optional ccsds_mal.protobuf.LONG procedureUid = 15;
  optional ccsds_mal.protobuf.STRING partition = 16;
  optional ccsds_mal.protobuf.STRING fileReference = 17;
  optional ccsds_mal.protobuf.UINTEGER largeSequenceCount = 18;
  optional tchistory.protobuf.ExpectedAck expectedAck = 19;
  optional tchistory.protobuf.SuccessiveAck successiveAck = 20;
  repeated tchistory.protobuf.TcComponent tcComponent = 21;
  optional ccsds_mal.protobuf.LONG largeTcHistoryId = 22;
}
